# interplex

./: .gitignore  .gitmodules  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  release-please-config.json
.cargo/: config.toml
.github/workflows/: package.yaml  release-please.yaml  temp.yaml
chart/: Chart.yaml  values.yaml
chart/interplex/: Chart.yaml  values.yaml
chart/interplex/templates/: NOTES.txt  service.yaml  sts.yaml
chart/templates/: _helpers.tpl  service.yaml  serviceaccount.yaml  sts.yaml
client/: Cargo.toml
client/src/: main.rs
service/: interplex.service  interplex.service.template  post-install.sh
src/: main.rs
src/cache/: disk.rs  mod.rs  simple.rs
src/server/: cache.rs  mod.rs
