[package]
name = "interplex"
version = "0.1.0"
edition = "2021"

[dependencies]
interplex-ai_schemas_community_neoeinstein-prost = { version = "0.4.0-20241014114534-833d361128cb.1", registry = "buf" }
interplex-ai_schemas_community_neoeinstein-tonic = { version = "0.4.1-20241014114534-833d361128cb.1", registry = "buf" }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
log = "0.4"
env_logger = "0.9.3"
[build-dependencies]
tonic-build = "0.12.3"
