[package]
name = "interplex"
version = "0.1.0"
edition = "2021"

[dependencies]
interplex-ai_schemas_community_neoeinstein-prost = { version = "0.4.0-20241014114534-833d361128cb.1", registry = "buf" }
interplex-ai_schemas_community_neoeinstein-tonic = { version = "0.4.1-20241014114534-833d361128cb.1", registry = "buf" }
tokio = { version = "1.40.0", features = ["full"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
log = "0.4"
env_logger = "0.9.3"
anyhow = "1.0.89"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
fs = "0.0.5"
tempfile = "3.13.0"
clap = { version = "4.5.20", features = ["derive"] }
[build-dependencies]
tonic-build = "0.12.3"
